complete all basics
